# sopa-de-letras

./: LICENSE  README.md  asset-manifest.json  docker-compose.yml  index.html  package-lock.json
backend/: Dockerfile  app.py  corrected_words.txt  filter.py  main.py  pyproject.toml  requirements.txt  setup.py  words.txt
backend/gamesdl/: game_logic.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/public/: manifest.json
frontend/src/: AboutBox.js  App.js  Context.js  CustomTime.js  HelpBox.js  LoadingScreen.js  ScoreOverlay.js  Timer.js  TopBar.js  WordContext.js  WordProvider.js  grid.js  index.css  index.js  menuOverlay.js  rightMenu.js  title.js  wordsList.js
static/css/: main.dad4617b.css  main.dad4617b.css.map
static/js/: 845.b4885689.chunk.js  845.b4885689.chunk.js.map  main.2bc63482.js  main.2bc63482.js.map  main.318a6fc6.js  main.318a6fc6.js.map  main.b5d4239d.js  main.b5d4239d.js.map
